syntax = "proto3";
package powergate.admin.v1;

import "powergate/user/v1/user.proto";

option go_package = "github.com/textileio/powergate/v2/api/gen/powergate/admin/v1;adminPb";

// Wallet
message NewAddressRequest {
  string address_type = 1;
}

message NewAddressResponse {
  string address = 1;
}

message AddressesRequest {
}

message AddressesResponse {
  repeated string addresses = 1;
}

message SendFilRequest {
  string from = 1;
  string to = 2;	
  string amount = 3;
}

message SendFilResponse {
}

// Users

message User {
  string id = 1;
  string token = 2;
}

message CreateUserRequest {
}

message CreateUserResponse {
  User user = 1;
}

message UsersRequest {
}

message UsersResponse {
  repeated User users = 1;
}

// Storage Info

message StorageInfoRequest {
  string user_id = 1;
  string cid = 2;
}

message StorageInfoResponse {
  powergate.user.v1.StorageInfo storage_info = 1;
}

message ListStorageInfoRequest {
  repeated string user_ids = 1;
  repeated string cids = 2;
}

message ListStorageInfoResponse {
  repeated powergate.user.v1.StorageInfo storage_info = 1;
}

// Storage Jobs

message ListStorageJobsRequest {
  string user_id_filter = 1;
  string cid_filter = 2;
  uint64 limit = 3;
  bool ascending = 4;
  string next_page_token = 5;
  powergate.user.v1.StorageJobsSelector selector = 6;
}

message ListStorageJobsResponse {
  repeated powergate.user.v1.StorageJob storage_jobs = 1;
  bool more = 2;
  string next_page_token = 3;
}

message StorageJobsSummaryRequest {
  string user_id = 1;
  string cid = 2;
}


message StorageJobsSummaryResponse {
  repeated string queued_storage_jobs = 1;
  repeated string executing_storage_jobs = 2;
  repeated string final_storage_jobs = 3;
}

message GCStagedRequest {
}

message GCStagedResponse {
	repeated string unpinned_cids = 1;
}

message PinnedCidsRequest {
}

message PinnedCidsResponse {
	repeated HSPinnedCid cids = 1;
}

message HSPinnedCid {
	string cid = 1;
	repeated HSPinnedCidUser users = 2;
}

message HSPinnedCidUser {
	string user_id = 1;
	bool staged = 2;
	int64 created_at = 3;
}

service AdminService {
  // Wallet
  rpc NewAddress(NewAddressRequest) returns (NewAddressResponse) {}
  rpc Addresses(AddressesRequest) returns (AddressesResponse) {}
  rpc SendFil(SendFilRequest) returns (SendFilResponse) {}

  // Users
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc Users(UsersRequest) returns (UsersResponse) {}

  // Storage Info
  rpc StorageInfo(StorageInfoRequest) returns (StorageInfoResponse) {}
  rpc ListStorageInfo(ListStorageInfoRequest) returns (ListStorageInfoResponse) {}

  // Storage Jobs
  rpc ListStorageJobs(ListStorageJobsRequest) returns (ListStorageJobsResponse) {}
  rpc StorageJobsSummary(StorageJobsSummaryRequest) returns (StorageJobsSummaryResponse) {}

  rpc GCStaged(GCStagedRequest) returns (GCStagedResponse) {}
  rpc PinnedCids(PinnedCidsRequest) returns (PinnedCidsResponse) {}
}
